--- a/AplicacaoWeb/appsettings.Development.json
+++ b/AplicacaoWeb/appsettings.Development.json
@@ -10,5 +10,8 @@
     "BaseUrl": "http://localhost:8080/",
     "user": "thiago.xavier",
     "password": "fiapsecurity"
+  },
+  "ProdutoService": {
+    "BaseUrl": "http://localhost:3000/"
   }
 }
